# SmartTranslator

./: .clang-format  .clang-tidy  .clang-tidy.yaml  .cppcheck  CMakeLists.txt  Dockerfile  README.md  auto_release.sh  cppcheck.ini  docker-compose.yml  installer.nsi  package_macos.sh  release.sh  smart-translator.spec
.githooks/: pre-commit
.github/workflows/: ci-cd.yml  ci-minimal.yml  ci.yml  notify.yml
DEBIAN/: control
config/: config.yaml
docs/: Doxyfile
github/workflows/: notify-build.yml
scripts/: package_macos.sh  release.sh  version.sh
src/: main.cpp
